fix: header style on small screen size 💞

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
 :root {
-  --header-height: 60px;
+  --header-height: 80px;
+
   --left-sidebar-max-width: 18rem;
   --right-sidebar-max-width: 18rem;
+}
+
+@media (min-width: 1028px) {
+  :root {
+    --header-height: 60px;
+  }
 }
 
 .Polaris-Select .Polaris-Select__SelectedOption {
